予約カレンダー追加

--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -85,6 +85,10 @@
                 <p>お気に入り施設はありません。</p>
             {% endif %}
         </div>
+        <div class="calendar-section mt-5">
+            <h2>予約カレンダー</h2>
+            <div id="calendar"></div>
+        </div>
         <div class="mt-4">
             <a href="{% url 'users:index' %}" class="btn btn-secondary">トップ画面へ戻る</a>
         </div>
