--- a/users/templates/users/event_detail.html
+++ b/users/templates/users/event_detail.html
@@ -16,6 +16,12 @@
             <p class="card-text">レベル: {{ event.get_level_class_display }}</p>
             <p class="card-text">カテゴリ: {{ event.get_category_display }}</p>
             <p class="card-text">募集人数: {{ event.capacity }}名</p>
+            <div class="mt-3">
+                <form method="post" action="{% url 'users:event_delete' event.pk %}" style="display: inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('このイベントを削除しますか？')">削除</button>
+                </form>
+            </div>
         </div>
     </div>
     {% if user %}
